--- a/driver/Cargo.toml
+++ b/driver/Cargo.toml
@@ -12,7 +12,7 @@ keywords = [
 ]
 
 [dependencies]
-device-driver = { version = "1.0.2", default-features = false, features = [
+device-driver = { path = "../../../device-driver/device-driver/", default-features = false, features = [
     "dsl",
 ] }
 defmt = { version = "0.3", optional = true }
