--- a/examples/esp32c6/Cargo.toml
+++ b/examples/esp32c6/Cargo.toml
@@ -12,7 +12,7 @@ critical-section = "1.2.0"
 cst816s-device-driver = { path = "../../driver", features = ["defmt-03"] }
 defmt = "0.3.10"
 defmt-rtt = "0.4.1"
-device-driver = { path = "../../../../device-driver/device-driver/", default-features = false }
+device-driver = { git = "https://github.com/DivineGod/device-driver", branch = "fix/radium", default-features = false }
 embedded-graphics = "0.8.1"
 esp-backtrace = { version = "0.15.0", features = [
     "defmt",
