--- a/examples/esp32c6/Cargo.toml
+++ b/examples/esp32c6/Cargo.toml
@@ -14,6 +14,7 @@ defmt = "0.3.10"
 defmt-rtt = "0.4.1"
 device-driver = { git = "https://github.com/DivineGod/device-driver", branch = "fix/radium", default-features = false }
 embedded-graphics = "0.8.1"
+embedded-hal-bus = "0.2.0"
 esp-backtrace = { version = "0.15.0", features = [
     "defmt",
     "esp32c6",
@@ -22,8 +23,8 @@ esp-backtrace = { version = "0.15.0", features = [
 ] }
 esp-hal = { version = "0.23.1", features = ["defmt", "esp32c6", "unstable"] }
 fugit = "0.3.7"
-gc9a01a_driver = "1.0.0"
 heapless = "0.8.0"
+mipidsi = "0.9.0"
 
 [profile.dev]
 # Rust debug is too slow.
