--- a/driver/Cargo.toml
+++ b/driver/Cargo.toml
@@ -12,7 +12,7 @@ keywords = [
 ]
 
 [dependencies]
-device-driver = { git = "https://github.com/DivineGod/device-driver", branch = "fix/radium", default-features = false, features = [
+device-driver = { version = "1.0.3", default-features = false, features = [
     "dsl",
 ] }
 defmt = { version = "0.3", optional = true }
