--- a/examples/esp32s3/Cargo.toml
+++ b/examples/esp32s3/Cargo.toml
@@ -8,9 +8,9 @@ name = "esp32s3"
 path = "./src/bin/main.rs"
 
 [dependencies]
+device-driver = { version = "1.0.3", default-features = false }
 critical-section = "1.2.0"
 cst816s-device-driver = { path = "../../driver" }
-device-driver = { git = "https://github.com/DivineGod/device-driver", branch = "fix/radium", default-features = false }
 embedded-graphics = "0.8.1"
 embedded-hal = "1.0.0"
 embedded-hal-bus = "0.3.0"
