--- a/driver/Cargo.toml
+++ b/driver/Cargo.toml
@@ -17,6 +17,7 @@ device-driver = { version = "1.0.3", default-features = false, features = [
 ] }
 defmt = { version = "0.3", optional = true }
 embedded-hal = "1"
+embedded-hal-async = "1"
 
 [features]
 defmt-03 = ["dep:defmt", "device-driver/defmt-03", "embedded-hal/defmt-03"]
