--- a/examples/esp32s3/Cargo.toml
+++ b/examples/esp32s3/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-edition = "2021"
+edition = "2024"
 name = "esp32s3"
 version = "0.1.0"
 
@@ -8,24 +8,24 @@ name = "esp32s3"
 path = "./src/bin/main.rs"
 
 [dependencies]
-device-driver = { version = "1.0.3", default-features = false }
+device-driver = { version = "1.0.7", default-features = false }
 critical-section = "1.2.0"
 cst816s-device-driver = { path = "../../driver" }
 embedded-graphics = "0.8.1"
 embedded-hal = "1.0.0"
 embedded-hal-bus = "0.3.0"
-esp-backtrace = { version = "0.15.0", features = [
+esp-backtrace = { version = "0.17.0", features = [
     "esp32s3",
     "exception-handler",
     "panic-handler",
     "println",
 ] }
-esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
-esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
-fugit = "0.3.7"
+esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
+esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
 heapless = "0.8.0"
-log = { version = "0.4.21" }
+log = { version = "0.4.27" }
 mipidsi = "0.9.0"
+esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
 
 [profile.dev]
 # Rust debug is too slow.
